--- a/activitydetails.html
+++ b/activitydetails.html
@@ -1,9 +1,220 @@
 ﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
-    <title></title>
+    <meta charset="UTF-8">
+    <title>Wisdom Pet Medicine</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://use.fontawesome.com/e6c333601a.js"></script>
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+    <header>
+        <nav class="navbar navbar-default navbar-fixed-top" style="background-color: #4c726f" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="index.html"><h1>Volunteer<span class="subhead">Ready to help</span></h1></a>
+                </div><!-- navbar-header -->
+                <div class="collapse navbar-collapse" id="collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="mission.html">Mission</a></li>
+                        <li><a href="service.html">Services</a></li>
+                        <li class="active"><a href="allactivity.html">Activities</a></li>
+                        <li><a href="#staff">About Us</a></li>
+                        <li><a href="signup.html">Join</a></li>
+                    </ul>
+                </div><!-- collapse navbar-collapse -->
+            </div><!-- container -->
+        </nav>
+    </header>
 
+    <section class="activity-details">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="col-md-8">
+                        <h2>Help kids with special needs learn horsemanship</h2>
+                        <h3 class="total-feedback text-center"><b>13 </b>feedbacks</h3>
+                        <div class="col-sm-6">
+                            <h3 class="text-info">Volunteers need : 10</h3>
+                        </div>
+                        <div class="col-sm-6">
+                            <h3 class="text-right text-success"><i class="fa fa-users" aria-hidden="true"></i>Volunteers joined : 28</h3>
+                        </div>
+
+
+                    </div>
+                    <div class="col-md-4">
+                        <img src="http://pipsum.com/300x300.jpg" alt="featured image" />
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <button type="button" class="btn btn-primary btn-lg btn-block btn-help">I want to help</button>
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="col-sm-6 event-additional-information">
+
+                    <h4>Where <i class="fa fa-map-marker" style="padding-left: 15px;" aria-hidden="true"></i></h4>
+                    <h5>3786 Heavner Avenue , Georgia</h5>
+                </div>
+                <div class="col-sm-6 event-additional-information">
+                    <h4>When<i class="fa fa-calendar" style="padding-left: 15px;" aria-hidden="true"></i></h4>
+                    <h5>10/12/2016</h5>
+                </div>
+
+            </div>
+            <div class="row">
+                <div class="col-sm-8 text-justify event-description">
+                    <p>Fatback pancetta leberkas pork belly ground round ball tip, pig tenderloin. Drumstick jowl fatback tri-tip pork belly capicola kielbasa jerky, hamburger andouille. Andouille brisket pig short loin, filet mignon turducken biltong fatback flank. Alcatra frankfurter shankle short ribs. Salami drumstick beef ribs ham strip steak, andouille frankfurter chicken turkey boudin venison. Pork rump ham hock cow corned beef kielbasa capicola ham, prosciutto tail pastrami pig fatback porchetta. Short loin tail salami, short ribs tenderloin beef ribs biltong ground round.Fatback pancetta leberkas pork belly ground round ball tip, pig tenderloin. Drumstick jowl fatback tri-tip pork belly capicola kielbasa jerky, hamburger andouille. Andouille brisket pig short loin, filet mignon turducken biltong fatback flank. Alcatra frankfurter shankle short ribs. Salami drumstick beef ribs ham strip steak, andouille frankfurter chicken turkey boudin venison. Pork rump ham hock cow corned beef kielbasa capicola ham, prosciutto tail pastrami pig fatback porchetta. Short loin tail salami, short ribs tenderloin beef ribs biltong ground round.</p>
+                </div>
+                <div class="col-sm-4">
+
+                </div>
+            </div>
+            <form action="/" method="post">
+                <div class="row feedback">
+                    <div class="col-md-6">
+                        <textarea class="form-control" rows="3" placeholder="Your comment please"></textarea>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="submit" class="btn btn-warning">Submit</button>
+                    </div>
+                </div>
+            </form>
+            <div class="all-comments">
+                <div class="row user-comments">
+                    <div class="col-sm-2 text-center">
+                        <img src="https://placeimg.com/100/100/people" class="img-circle" alt="user-name" />
+                    </div>
+                    <div class="col-sm-6">
+                        <h3>Philip P Heavener</h3>
+                        <p class="comment">
+                            Fatback pancetta leberkas pork belly ground round ball tip, pig tenderloin. Drumstick jowl fatback tri-tip pork belly capicola kielbasa jerky, hamburger andouille. Andouille brisket pig short loin
+
+                        </p>
+                    </div>
+                    <div class="col-md-2"><h5><i class="fa fa-calendar" style="padding-left: 15px;" aria-hidden="true">10/11//2016</i></h5></div>
+                </div>
+
+                <div class="row user-comments">
+                    <div class="col-sm-2 text-center">
+                        <img src="https://placeimg.com/100/100/people" class="img-circle" alt="user-name" />
+                    </div>
+                    <div class="col-sm-6">
+                        <h3>Philip P Heavener</h3>
+                        <p class="comment">
+                            Fatback pancetta leberkas pork belly ground round ball tip, pig tenderloin. Drumstick jowl fatback tri-tip pork belly capicola kielbasa jerky, hamburger andouille. Andouille brisket pig short loin
+
+                        </p>
+                    </div>
+                    <div class="col-md-2"><h5><i class="fa fa-calendar" style="padding-left: 15px;" aria-hidden="true">10/11//2016</i></h5></div>
+                </div>
+
+                <div class="row user-comments">
+                    <div class="col-sm-2 text-center">
+                        <img src="https://placeimg.com/100/100/people" class="img-circle" alt="user-name" />
+                    </div>
+                    <div class="col-sm-6">
+                        <h3>Philip P Heavener</h3>
+                        <p class="comment">
+                            Fatback pancetta leberkas pork belly ground round ball tip, pig tenderloin. Drumstick jowl fatback tri-tip pork belly capicola kielbasa jerky, hamburger andouille. Andouille brisket pig short loin
+
+                        </p>
+                    </div>
+                    <div class="col-md-2"><h5><i class="fa fa-calendar" style="padding-left: 15px;" aria-hidden="true">10/11//2016</i></h5></div>
+                </div>
+
+                <div class="row user-comments">
+                    <div class="col-sm-2 text-center">
+                        <img src="https://placeimg.com/100/100/people" class="img-circle" alt="user-name" />
+                    </div>
+                    <div class="col-sm-6">
+                        <h3>Philip P Heavener</h3>
+                        <p class="comment">
+                            Fatback pancetta leberkas pork belly ground round ball tip, pig tenderloin. Drumstick jowl fatback tri-tip pork belly capicola kielbasa jerky, hamburger andouille. Andouille brisket pig short loin
+
+                        </p>
+                    </div>
+                    <div class="col-md-2"><h5><i class="fa fa-calendar" style="padding-left: 15px;" aria-hidden="true">10/11//2016</i></h5></div>
+                </div>
+
+                <div class="row user-comments">
+                    <div class="col-sm-2 text-center">
+                        <img src="https://placeimg.com/100/100/people" class="img-circle" alt="user-name" />
+                    </div>
+                    <div class="col-sm-6">
+                        <h3>Philip P Heavener</h3>
+                        <p class="comment">
+                            Fatback pancetta leberkas pork belly ground round ball tip, pig tenderloin. Drumstick jowl fatback tri-tip pork belly capicola kielbasa jerky, hamburger andouille. Andouille brisket pig short loin
+
+                        </p>
+                    </div>
+                    <div class="col-md-2"><h5><i class="fa fa-calendar" style="padding-left: 15px;" aria-hidden="true">10/11//2016</i></h5></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- footer Section -->
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6">
+                    <p>
+                        <i class="fa fa-map-marker fa-3x" aria-hidden="true"></i>
+                        <span>
+                            4749 Armbrester Drive
+
+                            <b>NEOPIT,Wisconsin</b>
+                        </span>
+                    </p>
+                    <p>
+                        <i class="fa fa-phone-square fa-3x" aria-hidden="true"></i>
+                        <span>
+                            <b>+0767565-98</b>
+                        </span>
+
+                    </p>
+                    <p>
+                        <i class="fa fa-envelope fa-3x" aria-hidden="true"></i>
+                        <span>
+                            <a href="mailto:rsen253@gmail.com"><b>Mail Us!!</b></a>
+
+                        </span>
+
+                    </p>
+                </div>
+                <div class="col-sm-6 text-center">
+                    <h3>About Us</h3>
+                    <p>Rump ham meatloaf, tenderloin meatball capicola tri-tip bresaola hamburger turkey short loin pig pork loin drumstick tongue. Short loin fatback filet mignon, kielbasa pork chop chuck cow capicola.Rump ham meatloaf, tenderloin meatball capicola tri-tip bresaola hamburger turkey short loin pig pork loin drumstick tongue. Short loin fatback filet mignon, kielbasa pork chop chuck cow capicola.</p>
+                    <p>
+                        <a href="#"><img src="images/company1.png" alt="Alternate Text" /></a>
+                        <a href="#"><img src="images/company2.png" alt="Alternate Text" /></a>
+                        <a href="#"><img src="images/company3.png" alt="Alternate Text" /></a>
+                        <a href="#"><img src="images/company4.png" alt="Alternate Text" /></a>
+                        <a href="#"><img src="images/company2.png" alt="Alternate Text" /></a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid copyright text-center">
+            <h6>All rights reserved &copy;<b>Rahul</b> 2016</h6>
+        </div>
+    </footer>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <script src="https://npmcdn.com/isotope-layout@3.0/dist/isotope.pkgd.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+    <script src="js/myscript.js"></script>
 </body>
 </html>
