--- a/signup.html
+++ b/signup.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://use.fontawesome.com/e6c333601a.js"></script>
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -82,6 +84,12 @@
                         </div>
                     </div>
                     <div class="form-group">
+                        <label for="date" class="col-sm-4 control-label">DOB</label>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control" id="datepicker" placeholder="Date Of Birth">
+                        </div>
+                    </div>
+                    <div class="form-group">
                         <label for="country" class="col-sm-4 control-label">Country</label>
                         <div class="col-sm-8">
                             <select class="form-control">
@@ -123,15 +131,15 @@
                 <h4 class="text-center">Have an account ?</h4>
                 <form class="form-horizontal">
                     <div class="form-group">
-                        <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+                        <label for="email" class="col-sm-2 control-label">Email</label>
                         <div class="col-sm-10">
-                            <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                            <input type="email" class="form-control" id="email" placeholder="Email">
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+                        <label for="password" class="col-sm-2 control-label">Password</label>
                         <div class="col-sm-10">
-                            <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                            <input type="password" class="form-control" id="password" placeholder="Password">
                         </div>
                     </div>
 
@@ -212,6 +220,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
     <script src="https://npmcdn.com/isotope-layout@3.0/dist/isotope.pkgd.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <script src="js/myscript.js"></script>
 </body>
 </html>
